# siredir

./: Cargo.toml  Dockerfile  README.md
src/: config.rs  main.rs  redirector.rs
